src/objects/zqu__Format_Object__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Format_Currency__c</fullName>
        <defaultValue>12345678.90</defaultValue>
        <description>Do not change the default value, the default value is used for getting the correct display format</description>
        <label>Format Currency</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__Format_Date__c</fullName>
        <defaultValue>DATE(1960,12,10)</defaultValue>
        <description>Do not change the default value, the default value is used for getting the correct display format</description>
        <label>Format Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Format_Number__c</fullName>
        <defaultValue>12345678.90</defaultValue>
        <description>Do not change the default value, the default value is used for getting the correct display format</description>
        <label>Format Number</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Format Object</label>
    <nameField>
        <label>Format Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Format Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>